# jmbde-QT-models

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .pre-commit-config.yaml  .travis.yml  .yamllint.yml  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT_de-DE.md  CONTRIBUTING_de-DE.md  NEWS.md  README.md  appveyor.yml  build.py  build.yml  conanfile.py  eslint.config.js  graph_info.json  project-list.txt  project-structure-hints.md
.github/: CODEOWNERS  CODE_OF_CONDUCT_de-DE.md  CONTRIBUTING.md  CONTRIBUTING_de-DE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: 01-bug-report.yml  02-feature-request.yml
.github/actions/spelling/: reject.txt
.github/workflows/: assigned-pulls-todo.yml  auto-merge.yml  build.yml  ci.yml  codacy-analysis.yml  codeql-analysis.yml  commit-lint.yml  conan.yml  defender-for-devops.yml  devskim-analysis.yml  docker-publish.yml  mingw.yml  misspell-fixer.yml  ossar-analysis.yml  release-drafter.yml  scorecard.yml  stale.yml  styles.yml  triage-issues.yml
.travis/: install.sh
cmake/: ConfigjmbdeModels.cmake.in  FindjmbdeModels.cmake  GoogleTest-CMakeLists.txt.in  StaticAnalyzers.cmake  clang_format.cmake  compiler_options.cmake  config.h.in  cppcheck.cmake  deployment.cmake  packaging.cmake  version.h.in  windows_metafile.rc.in
config/lint/: iwyu.imp
config/spelling/: cspell.config.yaml
docs/: CMakeLists.txt  requirements.txt
include/: pch.h
include/jmbde/models/: account.h  chipcard.h  chipcardprofile.h  cityname.h  department.h  document.h  zipcity.h
include/jmbde/models/core/: commondata.h
include/jmbde/models/device/: computersoftware.h  manufacturer.h  mobile.h  printer.h  processor.h  software.h
include/jmbde/models/employee/: employee.h  employeeaccount.h  employeedocument.h
include/jmbdemodels/core/: commondata.h
include/jmbdemodels/database/: datacontext.h
include/jmbdemodels/device/: computer.h  devicename.h  devicetype.h  fax.h  os.h  phone.h
include/jmbdemodels/employee/: function.h  title.h
include/jmbdemodels/models/: account.h  chipcarddoor.h  chipcardprofiledoor.h  company.h  inventory.h  place.h  systemdata.h  zipcode.h
scripts/: build_mac  build_mac.save
src/: CMakeLists.txt  CMakeLists_files.cmake
src/cmake/: utils.cmake
src/core/: commondata.cpp
src/data/: script.sql
src/database/: datacontext.cpp
src/device/: computer.cpp  computersoftware.cpp  devicename.cpp  devicetype.cpp  fax.cpp  manufacturer.cpp  mobile.cpp  os.cpp  phone.cpp  printer.cpp  processor.cpp  software.cpp
src/employee/: employee.cpp  employeeaccount.cpp  employeedocument.cpp  function.cpp  title.cpp
src/include/: jmbdemodels-version.h
src/include/models/: account.h  chipcard.h  chipcarddoor.h
src/models/: account.cpp  chipcard.cpp  chipcarddoor.cpp  chipcardprofile.cpp  chipcardprofiledoor.cpp  cityname.cpp  company.cpp  department.cpp  document.cpp  inventory.cpp  place.cpp  systemdata.cpp  zipcity.cpp  zipcode.cpp
src/resources/: res.qrc  script.sql
test_package/: CMakeLists.txt  conanfile.py
tests/: CMakeLists.txt  test_account.cpp  test_datacontext.cpp
